testsuite/tests/grammar/invalid_list/non-list-cls.lkt
import lexer_example

grammar foo_grammar {
    num <- Num(@number)
    @main_rule main_rule <- ListNode+(num)
}
